# minimal3dp.github.io

./: .agent-memory.md  .gitignore  .vercelignore  404.html  AGENTS.md  DEPLOYMENT_RAILWAY.md  Dockerfile  IDEAS.md  MINIMAL3DP_APP_GUIDE.md  README.md  RECOMMENDATIONS.md  TODO.md  build.sh  go.mod  go.sum  hugo.new  hugo.toml  hugo_stats.json  index.html  index.xml  lighthouserc.json  minimal3dp.code-workspace  minimal3dp.github.io.code-workspace  package.hugo.json  package.json  pyproject.toml  rsync.sh  sitemap.xml  vercel.json
.github/: copilot-instructions.md  dependabot.yml
_templates/: index.html  index.xml  youtube-description.txt
about/: index.html
archetypes/: blog.md  reviews.md
blog/: index.html  index.xml
categories/: index.html  index.xml
content/: _index.md  test-popular.md
data/: affiliate-products.yaml  popular.json  youtube_channel.json  youtube_popular.json  youtube_popular_fallback.json
docs/: AGENT_PROMPTS.md  DEVTO-SETUP.md  MEDIUM-SETUP.md  RECOMMENDATIONS.md  SHORTCODES-AND-PARTIALS.md  SMTP-SETUP.md  UPTIME-MONITORING.md  YOUTUBE-SETUP.md
js/: input-shaping.js  main.js  main.min.0bb23d04204856243f8ceb4a03b6924c585cdc3858cf1e36033d95f06d8645c9.js  main.min.61c084f02019195fdf4fbee0c5c1db8221ab97d1f1a31373b1efab91a82897bf.js  main.min.ed396e284e315a6890773e243866a787bc49f19e890265d2acfbf1a492a46ffe.js  rotational-distance.js  x-and-y-offsets copy.js
klipper-calibration/: index.html  index.xml
m3dp-bridge/: Dockerfile  docker-compose.yml  main.py  models.py  pyproject.toml
m3dp-fdm-cost-calculator/: index.html
scss/: main.css  (+6 more)
(+869 files in other folders)
