[project]
name = "m3dp-bridge"
version = "0.1.0"
description = "Minimal 3DP Hardware Bridge & Smart Link System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
